# dotfiles

./: .gitignore  .luarc.json  Brewfile  CMakeLists.txt  Makefile  README.md  change.patch
alacritty/.config/alacritty/: alacritty.toml  alacritty.yml
bash/: .bashrc
bat/: README.md
bat/.config/bat/: config
clang/: .clang-format
ghostty/.config/ghostty/: config
git/: .catppuccin.gitconfig  .gclone  .gitconfig  .gitignore  .stow-local-ignore  git-delta
gvim/: .gvimrc
hammerspoon/.hammerspoon/: hammerspoon.lua  hyper.lua  init.lua  keys.lua  shortcuts.lua  window_rules.lua  yabai.lua
hammerspoon/.hammerspoon/hammerspoon/: apps.lua  caps.lua  hyper.lua  init.lua  keys.lua  spaces.lua  theme.lua  window.lua
hammerspoon/.hammerspoon/scripts/: theme.sh
hammerspoon/.hammerspoon/yabai/: init.lua  window.lua  yabai.lua
jetbrains/: .ideavimrc
jetbrains/.config/jetbrains/: .ideavimrc
k9s/.config/k9s/: config.yaml
kanata/.config/kanata/: README.md  com.kanata.plist  kanata-hrm.kbd  kanata.kbd
karabiner/.config/karabiner/: karabiner.json
kitty/.config/kitty/: catppuccin-macchiato.conf  catppuccin.conf  current-theme.conf  dark-theme.auto.conf  fzf-theme.sh  keys.conf  kitty-session  kitty-tabs  kitty.conf  kitty.lua  light-theme.auto.conf  mappings.conf  scrollback.lua
limelight/.config/limelight/: limelightrc
mongo/: .bastion  .mongo
nvim/.config/nvim/: coc-settings.json  init.lua  (+3 more)
screen/: .screenrc
tmux/: .tmux.conf
tmux/.tmux/: dark.conf  light.conf
vim/: .vimrc
zsh/: .stow-local-ignore  .zprofile  .zshenv  .zshrc  fzf_dark  fzf_light
(+103 files in other folders)
